--- a/src/academix/apps/authentication_app/static/css/auth_css.css
+++ b/src/academix/apps/authentication_app/static/css/auth_css.css
@@ -10,6 +10,16 @@
     text-align: center;
 }
 
+.icon-login-error {
+    opacity: 0; 
+    transition: opacity 0.3s; 
+}
+
+.icon-login-error.visible {
+    opacity: 1; 
+}
+
+
 @media (min-width: 768px) {
     .gradient-form {
         height: 100vh !important;
