--- a/src/academix/apps/authentication_app/templates/index_auth.html
+++ b/src/academix/apps/authentication_app/templates/index_auth.html
@@ -18,29 +18,31 @@
                     <div class="card-body p-md-5 mx-md-4">
       
                       <div class="text-center">
-                        <img src="{% static 'image/svg/logo.svg' %}"
-                          style="width: 185px;" alt="logo">
+                        <img src="{% static 'image/svg/logo.svg' %}" style="width: 185px;">
                       </div>
       
-                      <form>
-                        <div class="form-outline mb-4 mt-4 small">
-                          <label class="form-label " for="form2Example11">Ваш логин</label>
-                          <input type="email" id="form2Example11" class="form-control"
-                            placeholder="Введите Ваш логин" />
-                        </div>
-      
+                      <div class="form-outline mb-4 mt-4 small">
+                        <label class="form-label d-flex align-items-center">
+                            Ваш логин
+                            <img src="{% static 'image/svg/icon-error.svg' %}" width="18px" class="ml-2 mx-1 d-none" id="icon-login-error">
+                        </label>
+                            <input type="email" id="username-input" class="form-control" placeholder="Введите Ваш логин" />
+                      </div>
+                      
                         <div class="form-outline mb-4 small">
-                          <label class="form-label" for="form2Example22">Ваш пароль</label>
-                          <input type="password" id="form2Example22" class="form-control" 
-                          placeholder="Введите Ваш пароль"/>
+                          <label class="form-label d-flex align-items-center">
+                            Ваш пароль
+                            <img src="{% static 'image/svg/icon-error.svg' %}" width="18px" class="ml-2 mx-1 d-none" id="icon-password-error"
+                                >
+                          </label>
+                          <input type="password" id="password-input" class="form-control" placeholder="Введите Ваш пароль"/>
                         </div>
-      
+
                         <div class="text-center pt-1 mb-5 pb-1">
-                          <button class="btn btn-primary btn-block fa-lg gradient-custom-2" type="button">Авторизоваться</button>
+                          <button class="btn btn-primary btn-block fa-lg gradient-custom-2" type="button" id="login-button" onclick="authenticate_user()"> Авторизоваться</button>
                           <hr>
                           <a class="text-muted" href="#!">Забыли пароль?</a>
                         </div>
-                      </form>
       
                     </div>
                   </div>
@@ -73,4 +75,5 @@
 {% endblock content %}
 
 {% block scripts %}
+<script src="{% static 'js/auth_js.js' %}"></script>
 {% endblock scripts %}
