--- a/src/academix/apps/teacher_apps/teacher_main_app/templates/index_teach.html
+++ b/src/academix/apps/teacher_apps/teacher_main_app/templates/index_teach.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Авторизация - Academix{% endblock title %}
+{% block title %}Рабочее место преподавателя - Academix{% endblock title %}
 
 {% block content %}
 {% csrf_token %}
