--- a/src/academix/apps/authentication_app/static/css/auth_css.css
+++ b/src/academix/apps/authentication_app/static/css/auth_css.css
@@ -19,8 +19,40 @@
     opacity: 1; 
 }
 
+.animated-create {
+    animation: fadeIn 1.5s ease-in-out forwards;
+}
+  
+.animated-remove {
+    animation: fadeOut 1s ease-in-out forwards;
+}
+
+.otp-input::-webkit-inner-spin-button,
+.otp-input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 i {
     cursor: pointer;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+  
+  @keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 @media (min-width: 768px) {
