--- a/src/academix/apps/main_app/templates/index_main.html
+++ b/src/academix/apps/main_app/templates/index_main.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Авторизация - Academix{% endblock title %}
+{% block title %}Главная страница - Academix{% endblock title %}
 
 {% block content %}
 {% csrf_token %}
