--- a/src/academix/apps/student_apps/student_main_app/templates/index_stud.html
+++ b/src/academix/apps/student_apps/student_main_app/templates/index_stud.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Авторизация - Academix{% endblock title %}
+{% block title %}Рабочее место студента - Academix{% endblock title %}
 
 {% block content %}
 {% csrf_token %}
